Fixed out of memory exception.
git-svn-id: http://srvdqrd2:8008/svn/jdemetra_seer/trunk@56 6a911cac-6de7-584c-b8a8-48824e541a73